# fixturebench

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: catalog.md  design-rationale.md  extending.md  scores.md
eval/: cases.json
examples/: playwright_agentic_agent.py  playwright_smoke_agent.py  stub_agent.py
portals/: README.md
portals/_shared/: __init__.py  base_orders.json  extra.css  templating.py
portals/v1/: __init__.py  server.py
portals/v1/data/: orders.json
portals/v1/templates/: order_detail.html
portals/v10/: server.py
portals/v10/data/: orders.json
portals/v10/templates/: orders.html
portals/v11/: server.py
portals/v11/data/: orders.json
portals/v11/templates/: order_shell.html
portals/v12/: server.py
portals/v12/data/: orders.json
portals/v12/templates/: login.html  order_detail.html
portals/v13/: server.py
portals/v13/data/: orders.json
portals/v13/templates/: orders.html
portals/v14/: __init__.py  server.py
portals/v14/templates/: order_detail.html  orders.html
portals/v15/: __init__.py  server.py
portals/v15/templates/: order_detail.html
portals/v16/: __init__.py  server.py
portals/v16/static/: style.css
portals/v16/templates/: order_detail.html
portals/v17/: __init__.py  server.py
portals/v17/data/: orders.json
portals/v17/templates/: orders.html
portals/v18/: __init__.py  server.py
portals/v18/templates/: verify.html
portals/v19/: __init__.py  server.py
portals/v19/templates/: order_detail.html
portals/v2/: __init__.py  server.py
portals/v2/data/: orders.json
portals/v2/static/: style.css
portals/v2/templates/: order_detail.html  orders.html
portals/v20/: __init__.py  server.py
portals/v20/templates/: mfa.html
portals/v21/: __init__.py  server.py
portals/v21/data/: orders.json
portals/v21/templates/: order_detail.html  orders.html
portals/v22/: __init__.py  server.py
portals/v22/data/: orders.json
portals/v22/templates/: order_detail.html  orders.html
portals/v23/: __init__.py  server.py
portals/v23/data/: orders.json
portals/v23/templates/: order_detail.html  orders.html
portals/v3/: __init__.py  server.py
portals/v3/data/: orders.json
portals/v3/static/: style.css
portals/v3/templates/: orders.html
portals/v4/: server.py
portals/v5/: server.py
portals/v6/: server.py
portals/v7/: server.py
portals/v8/: server.py
portals/v9/: server.py
scripts/: run_eval.py
src/fixturebench/: __init__.py  api.py  cli.py  paths.py
tests/: test_eval.py  test_final_portals.py  test_plug_and_play.py  test_portal_data_alignment.py  test_portal_registry.py  test_virtualized_grid.py  test_writeback.py
tests/fixtures/: expected_po_1039.json  expected_po_1041.json  expected_po_1042.json  expected_po_1042_v2.json  expected_po_1042_v3.json  expected_state_po_1042_acked.json
(+28 files in other folders)
