[project]
name = "fixturebench"
version = "0.2.0"
description = "Deterministic eval environments and programmatic scoring for browser agents"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Prabal Singh" }]
keywords = ["browser-agents", "evaluation", "benchmark", "playwright", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
portal = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/Prabal-Singh/fixturebench"
Repository = "https://github.com/Prabal-Singh/fixturebench"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fixturebench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
