[project]
name = "fixturebench"
version = "0.7.1"
description = "Deterministic eval for procurement browser agents (buyer/supplier portals)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Prabal Singh" }]
keywords = [
    "browser-agents",
    "procurement",
    "buyer-portal",
    "evaluation",
    "benchmark",
    "playwright",
    "purchase-order",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
envs = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]
portal = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest>=8.0.0",
]
playwright = [
    "playwright>=1.49.0",
]

[project.scripts]
fixturebench = "fixturebench.cli:main"

[project.urls]
Homepage = "https://github.com/Prabal-Singh/fixturebench"
Repository = "https://github.com/Prabal-Singh/fixturebench"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fixturebench"]

[tool.hatch.build.targets.wheel.force-include]
"portals" = "fixturebench/bundle/portals"
"eval" = "fixturebench/bundle/eval"
"tests/fixtures" = "fixturebench/bundle/tests/fixtures"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
